--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,10 @@ rvm:
   - 1.8.7
   - 1.9.2
   - 1.9.3
-  - ree
+  - jruby-18mode
+  - jruby-19mode
+  - rbx-18mode
+  - rbx-19mode
+  - ruby-head
+  - jruby-head
+  - ree  
