--- a/spec/shared_engine/Gemfile
+++ b/spec/shared_engine/Gemfile
@@ -1,4 +1,4 @@
-source "http://rubygems.org"
+source 'http://rubygems.org'
 
 # Declare your gem's dependencies in shared_engine.gemspec.
 # Bundler will treat runtime dependencies like base dependencies, and
