--- a/spec/shared_engine/Rakefile
+++ b/spec/shared_engine/Rakefile
@@ -20,10 +20,7 @@ RDoc::Task.new(:rdoc) do |rdoc|
   rdoc.rdoc_files.include('lib/**/*.rb')
 end
 
-APP_RAKEFILE = File.expand_path("../active_record_dummy/Rakefile", __FILE__)
+APP_RAKEFILE = File.expand_path('../active_record_dummy/Rakefile', __FILE__)
 load 'rails/tasks/engine.rake'
 
-
-
 Bundler::GemHelper.install_tasks
-
