--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,21 +5,17 @@ on: [push]
 jobs:
   rspec:
     runs-on: ubuntu-latest
-    services:
-      postgres:
-        image: postgres
-        env:
-          POSTGRES_PASSWORD: postgres
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-      mongo:
-        image: mongo
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+    - name: Start Postgres
+      uses: harmon758/postgresql-action@v1
+      with:
+        postgresql version: '11'
+    - name: Start MongoDB
+      uses: supercharge/mongodb-github-action@1.3.0
+      with:
+        mongodb-version: '4.4'
     - name: Setup Ruby
       uses: actions/setup-ruby@v1
       with:
